[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/game/trade/trade_panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/game/trade/trader_popup.gd" type="Script" id=5]

[node name="TraderPopup" type="PopupDialog"]
visible = true
margin_right = 800.0
margin_bottom = 500.0
rect_min_size = Vector2( 800, 370 )
popup_exclusive = true
script = ExtResource( 5 )

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="PlayerBg" type="ColorRect" parent="HBox"]
margin_right = 100.0
margin_bottom = 500.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
color = Color( 0.705882, 0.705882, 0.705882, 0.705882 )

[node name="Players" type="VBoxContainer" parent="HBox/PlayerBg"]
margin_left = -808.0
margin_right = -708.0
margin_bottom = 500.0
rect_min_size = Vector2( 100, 0 )

[node name="TradePanel" parent="HBox" instance=ExtResource( 1 )]

[connection signal="trade_canceled" from="HBox/TradePanel" to="." method="_on_trade_canceled"]
[connection signal="trade_confirmed" from="HBox/TradePanel" to="." method="_on_trade_confirmed"]
